# jrl-dynamics

./: .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  STATUS  autogen.sh  cmake_uninstall.cmake.in  configure  configure.ac  dynamics-config.h.cmake  dynamicsJRLJapan.pc  dynamicsJRLJapan.pc.cmake  dynamicsJRLJapan.pc.in  index.html  jrl-dynamics.pc.cmake
doc/: CMakeLists.txt  Doxyfile.extra.in  Makefile.am  Makefile.in  header.html  package.dox  package.dox.cmake  package.dox.in
doc/additionalDoc/: Algorithms.h  BuildingARobot.h  BuildingARobot.hh  ComputingQuantities.h  DevelopperDocumentation.h  DevelopperDocumentation.hh  JointPrivate.h  JointPrivate.hh  RNEASpatial.h  UserDocumentation.h  UserDocumentation.hh  install.h  install.hh  package.h
doc/html/: _body_8h.html  _body_8h__dep__incl.map  _body_8h__dep__incl.md5  _body_8h__incl.map  _body_8h__incl.md5  _dynamic_body_8h.html  _dynamic_body_8h__dep__incl.map  _dynamic_body_8h__dep__incl.md5  _dynamic_body_8h__incl.map  _dynamic_body_8h__incl.md5  _dynamic_multi_body_8h.html  _dynamic_multi_body_8h__dep__incl.map  _dynamic_multi_body_8h__dep__incl.md5  _dynamic_multi_body_8h__incl.map  _dynamic_multi_body_8h__incl.md5  _humanoid_dynamic_multi_body_8h.html  _humanoid_dynamic_multi_body_8h__dep__incl.map  _humanoid_dynamic_multi_body_8h__dep__incl.md5  _humanoid_dynamic_multi_body_8h__incl.map  _humanoid_dynamic_multi_body_8h__incl.md5  _humanoid_specificities_8h.html  _humanoid_specificities_8h__dep__incl.map  _humanoid_specificities_8h__dep__incl.md5  _humanoid_specificities_8h__incl.map  _humanoid_specificities_8h__incl.md5  _joint_8h.html  _joint_8h__dep__incl.map  _joint_8h__dep__incl.md5  _joint_8h__incl.md5  _multi_body_8h.html  _multi_body_8h__dep__incl.map  _multi_body_8h__dep__incl.md5  _multi_body_8h__incl.map  _multi_body_8h__incl.md5  annotated.html  classjrl_c_i_rdynamics_j_r_l_japan_1_1_body-members.html  classjrl_c_i_rdynamics_j_r_l_japan_1_1_body.html  classjrl_c_i_rdynamics_j_r_l_japan_1_1_body__coll__graph.map  classjrl_c_i_rdynamics_j_r_l_japan_1_1_body__coll__graph.md5  classjrl_c_i_rdynamics_j_r_l_japan_1_1_body__inherit__graph.map  (+120 more)
include/: Makefile.am
include/dynamicsJRLJapan/: Body.h  DynamicBody.h  DynamicMultiBody.h  Foot.h  GeometricData.h  Hand.h  HumanoidDynamicMultiBody.h  HumanoidSpecificities.h  InverseKinematics.h  Joint.h  MultiBody.h  SpiritVRMLReader.h  dll.h  dynamicJRLJapan_API.h  dynamicRobot.h  dynamicsJRLJapan.h  dynamicsJRLJapanFactory.h  fileReader.h  humanoidDynamicRobot.h  jrlDynamicRobotNA.hpp  jrlHumanoidDynamicRobotNA.hpp  robotDynamicsImpl.h
include/jrlCIRdynamicsJRLJapan/: HumanoidDynamicMultiBody.h  HumanoidSpecificities.h
include/robotDynamicsJRLJapan/: Body.h  DynamicBody.h  DynamicMultiBody.h  Hand.h  HumanoidDynamicMultiBody.h  HumanoidSpecificities.h  Joint.h  Makefile  Makefile.am  Makefile.in  MultiBody.h  dynamicsJRLJapan.h  fileReader.h
src/: Body.cpp  Body.h  CMakeLists.txt  Debug.h  DynamicBody.cpp  DynamicMultiBody.cpp  DynamicMultiBody.h  DynamicMultiBodyActuated.cpp  DynamicMultiBodyAngularMomentum.cpp  DynamicMultiBodyArticularJacobian.cpp  DynamicMultiBodyCenterOfMass.cpp  DynamicMultiBodyInertiaMatrix.cpp  DynamicMultiBodyJointRank.cpp  DynamicMultiBodyNewtonEuler.cpp  DynamicMultiBodyNewtonEulerBackwardDynamics.cpp  DynamicMultiBodyProperties.cpp  DynamicMultiBodyTree.cpp  Foot.h  Hand.cpp  Hand.h  HumanoidDynamicMultiBody.cpp  HumanoidDynamicMultiBody.h  HumanoidSpecificities.cpp  HumanoidSpecificities.h  InverseKinematics.cpp  Joint.cpp  Joint.h  Makefile.am  Makefile.in  MultiBody.cpp  MultiBody.h  SpiritVRMLReader.cpp  dynamicsJRLJapan.h  dynamicsJRLJapanFactory.cpp  fileReader.cpp  fileReader.h
src/private/: Body.cpp  Body.h  Debug.h  DynMultiBodyPrivate.cpp  DynMultiBodyPrivate.h  DynamicBodyPrivate.cpp  DynamicBodyPrivate.h  DynamicMultiBodyActuated.cpp  DynamicMultiBodyAngularMomentum.cpp  DynamicMultiBodyArticularJacobian.cpp  DynamicMultiBodyCenterOfMass.cpp  DynamicMultiBodyInertiaMatrix.cpp  DynamicMultiBodyJointRank.cpp  DynamicMultiBodyNewtonEuler.cpp  DynamicMultiBodyNewtonEulerBackwardDynamics.cpp  DynamicMultiBodyProperties.cpp  DynamicMultiBodyTree.cpp  Foot.cpp  HSArmNodeParser.hpp  HSFootNodeParser.hpp  HSHandNodeParser.hpp  HSHumanoidNodeParser.hpp  HSLegNodeParser.hpp  HSSerialChainParser.hpp  HSWaistNodeParser.hpp  Hand.cpp  HumDynMultiBodyPrivate.cpp  HumDynMultiBodyPrivate.h  HumanoidDynamicMultiBody.cpp  HumanoidSpecificities.cpp  HumanoidSpecificities.h  HumanoidSpecificitiesData.h  HumanoidSpecificitiesParser.cpp  JointAnchorPrivate.cpp  (+27 more)
tools/: CMakeLists.txt  CreateHPPBuilder.cpp  CreateMapleModel.cpp  CreateVRMLPoseFile.cpp  GenerateRobotForAMELIF.cpp  GenerateRobotForAMELIF.h  GenerateRobotForHppBuilder.cpp  GenerateRobotForHppBuilder.h  GenerateRobotForMaple.cpp  GenerateRobotForMaple.h  GenerateRobotForMapple.cpp  GenerateRobotForMapple.h  GenerateRobotForVRML2.cpp  GenerateRobotForVRML2.h  ReadOpenHRPFileAndExport.cpp  ReadPosFile.cpp  oneStep.pos  position.articular  position.articular.half-sitting
unitTesting/: #TestHumanoidDynamicRobot.cpp#  AnalysisHum09.gnu  AnalysisHum092.gnu  AnalysisHum09Actual.gnu  AnalysisHum09Feet.gnu  AnalysisHum09Waist.gnu  CMakeLists.txt  CommonTools.cpp  CommonTools.h  ComputeRealZMP.cpp  ComputeTorqueOnTrajectory.cpp  Fbackward.sci  Fforward.sci  HumanoidCopy.cpp  HumanoidCopy.h  Makefile.am  Makefile.in  Test2Models.cpp  TestAbstractInterface.cpp  TestBuildFromJointTree.cpp  TestBuildFromJointTreeMathieu.cpp  TestCopyJointTreeThroughAbstractInterface.cpp  TestFreeFlyer.cpp  TestHumanoidDynamicRobot.cpp  TestHumanoidDynamicRobot2.cpp  TestHumanoidDynamicRobotDebugLayale.cpp  TestHumanoidDynamicRobotglut.cpp  TestPb1.cpp  TestRobotDynamicsImpl.cpp  TestSimpleLegRobot.cpp  TestSot.cpp  TestSpatial_XByX.cpp  TestSpatial_XBydv.cpp  TestSpatial_XByf.cpp  TestSpatial_XByv.cpp  TestSpatial_XEgalX.cpp  TestSpatial_XInverse.cpp  TestSpatial_XTByf.cpp  TestSpatial_XTByv.cpp  TestSpatial_doubleByv.cpp  (+32 more)
(+1100 files in other folders)
