# 
#  Copyright 2007 Florent Lamiraux CNRS-LAAS
# 

dynamicsJRLJapandir = @includedir@/dynamicsJRLJapan
dynamicsJRLJapan_HEADERS = \
	dynamicsJRLJapan/dynamicsJRLJapan.h \
	dynamicsJRLJapan/fileReader.h \
	dynamicsJRLJapan/Joint.h \
	dynamicsJRLJapan/Body.h \
	dynamicsJRLJapan/Hand.h \
	dynamicsJRLJapan/MultiBody.h \
	dynamicsJRLJapan/DynamicBody.h \
	dynamicsJRLJapan/DynamicMultiBody.h \
	dynamicsJRLJapan/HumanoidDynamicMultiBody.h \
	dynamicsJRLJapan/HumanoidSpecificities.h \
	dynamicsJRLJapan/robotDynamicsImpl.h
